centered the main overview heading and fixed a spacing issue where the heading was slightly behind the navigation

--- a/src/components/overview/overview.css
+++ b/src/components/overview/overview.css
@@ -2,6 +2,11 @@
     overflow-x : hidden;
     overflow-y : hidden;
 }
+.overview-heading {
+    margin-top : 3rem;
+    padding : 30px;
+    text-align : center;
+}
 
 /*@media screen and (max-width : 767px) {
     .coins-main-header {
